--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A static landing page for shallwi.co built with HTML, CSS, JS, and Parcel.",
   "main": "index.js",
   "scripts": {
+    "dev": "parcel src/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
