update hero padding

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A static landing page for shallwi.co built with HTML, CSS, JS, and Parcel.",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel src/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel /src/index.html",
+    "build": "parcel build /src/index.html"
   },
   "repository": {
     "type": "git",
