--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/bcmdr/shallwi-site-parcel#readme",
   "dependencies": {
+    "@bcmdr/catch": "^1.1.1",
     "parcel": "^1.12.3"
   }
 }
